SU 母版跟除錯

--- a/Main.Master
+++ b/Main.Master
@@ -10,39 +10,10 @@
     </asp:ContentPlaceHolder>
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <script>
-        //  展開/收合按鈕
-        $(document).ready(function () {
-
-            $("#collapse").on("click", function () {
-
-                $("#sidebar").toggleClass("active");
-                $(".fa-align-left").toggleClass("fa-chevron-circle-right");
-            })
-        })</script>
-    <style>
-        #txtAccount, #txtPassword, #btnLogin, #ltlMessage, #btnLogout {
-            background-color: white;
-            color: black;
-            font-family: Consolas;
-            font-size: 22pt;
-        }
-
-
-        #lblTEXT {
-            color: white;
-            font-size: 42pt;
-        }
-
-        .span1 {
-            color: white;
-            font-size: 16pt;
-        }
-    </style>
-
+        <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery.min.js"></script>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -80,30 +51,24 @@
                                 <i class="fas fa-align-left"></i>
                             </button>
                             <div>
-                                <!-- List 列表 -->
-                                <p>母版塊列表 </p>
-                                <a href="/index.aspx">首頁Home <i class="fas fa-home"></i></a>
+                                <a href="/HomePage.aspx">首頁Home <i class="fas fa-home"></i></a>
                                 <br>
-                                <asp:Repeater ID="Repeater1" runat="server">
-                                    <ItemTemplate>
-                                        <%--<a href="Pboard.aspx?PboardID=<%# Eval("PboardID")%>" title="<%# Eval("Pname") %>">--%>
-                                        <asp:Label runat="server"><%# Eval("Pname") %></asp:Label><br>
-                                    </ItemTemplate>
-                                </asp:Repeater>
-
-                                <%--後台人員才能看到--%>
-                                <asp:PlaceHolder ID="plhPBMode1" runat="server" Visible="false">
-                                    <asp:Button ID="btnPBMode1" runat="server" Text="編輯母版塊" OnClick="btnPBMode_Click" />
+                                <%--使用API的母版塊，前台觀看--%>
+                                <asp:PlaceHolder ID="plhAPI1_normal" runat="server">
+                                    <div id="PBDataList_normal1"></div>
                                 </asp:PlaceHolder>
+                                <%--使用API的母版塊，後台人員操作--%>
+                                <asp:PlaceHolder ID="plhAPI1_admin" runat="server" Visible="false">
+                                    <div id="PBDataList_Admin1"></div>
+                                </asp:PlaceHolder>
+
+                                <%--編輯母版塊按鈕，後台人員才能看到--%>
                                 <asp:PlaceHolder ID="plhPBEdit1" runat="server" Visible="false">
-                                    <div>
-                                        <asp:Button ID="btnPBUp1" runat="server" Text="上移" />
-                                        <asp:Button ID="btnPBDown1" runat="server" Text="下移" />
-                                    </div>
-                                    <div>
-                                        <asp:Button ID="btnPBSave1" runat="server" Text="儲存" OnClick="btnPBSave_Click" />
-                                        <asp:Button ID="btnPBCancel" runat="server" Text="取消" OnClick="btnPBCancel_Click" />
-                                    </div>
+                                    <asp:Button ID="btnPBEdit1" runat="server" Text="編輯母版塊" OnClick="btnPBEditMode_Click" />
+                                </asp:PlaceHolder>
+                                <%--結束編輯按鈕，後台人員才能看到--%>
+                                <asp:PlaceHolder ID="plhPBDsplMode1" runat="server" Visible="false">
+                                    <asp:Button ID="btnPBSave1" runat="server" Text="結束編輯" OnClick="btnPBSave_Click" />
                                 </asp:PlaceHolder>
                             </div>
                         </nav>
@@ -141,9 +106,6 @@
                 <!-- xs.sm時隱藏，sm以上顯示，sm為4格，md為4格，lg為4格，置中-->
                 <div class="d-none d-sm-block col-sm-4 col-md-4 col-lg-4  text-center ">
                     使用者狀態區
-
-
-                            
                             <div class="MemberStatus">
                                 <asp:Button ID="btnwebLogin" runat="server" Text="登入" OnClick="btnwebLogin_Click" />
                                 <asp:PlaceHolder ID="plgMemberStatus" runat="server">
@@ -177,9 +139,25 @@
                         <div class="d-none d-md-block col-md-2" id="PBArea">
                             <a href="/HomePage.aspx">首頁Home <i class="fas fa-home"></i></a>
                             <br>
-                            <div id="PBDataList"></div>
+                            <%--使用API的母版塊，前台觀看--%>
+                            <asp:PlaceHolder ID="plhAPI2_normal" runat="server">
+                                <div id="PBDataList_normal2"></div>
+                            </asp:PlaceHolder>
+                            <%--使用API的母版塊，後台人員操作--%>
+                            <asp:PlaceHolder ID="plhAPI2_admin" runat="server" Visible="false">
+                                <div id="PBDataList_Admin2"></div>
+                            </asp:PlaceHolder>
 
+                            <%--編輯母版塊按鈕，後台人員才能看到--%>
+                            <asp:PlaceHolder ID="plhPBEdit2" runat="server" Visible="false">
+                                <asp:Button ID="btnPBEdit2" runat="server" Text="編輯母版塊" OnClick="btnPBEditMode_Click" />
+                            </asp:PlaceHolder>
+                            <%--結束編輯按鈕，後台人員才能看到--%>
+                            <asp:PlaceHolder ID="plhPBDsplMode2" runat="server" Visible="false">
+                                <asp:Button ID="btnPBSave2" runat="server" Text="結束編輯" OnClick="btnPBSave_Click" />
+                            </asp:PlaceHolder>
                         </div>
+
                         <!--主內容區，sm為12格，md為8格 -->
                         <div class="col-sm-12 col-md-8">
                             <div class="row">
@@ -195,8 +173,9 @@
                                     <h3>黑名單</h3>
                                     <asp:TextBox ID="txtBlkAcc" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox>
                                     <asp:TextBox ID="txtBlkDate" runat="server" placeholder="(輸入懲處期限)"></asp:TextBox>
+                                    <button type="button" class="btn btn-sm btn-outline-light text-white bg-dark" data-bs-toggle="popover" data-bs-placement="bottom" animation="true" data-bs-content="請輸入會員帳號及日期(格式:2000-01-01)；更新日期請直接輸入新的日期並儲存，解除時間將為當日的0時；立即解除請輸入本日時間，永久黑單請輸入(2999-12-31)。 輸入帳號不得為管理員及版主。">?</button><br />
                                     <asp:Button ID="Button1" runat="server" Text="確認" OnClick="btnBlk_Click" /><br />
-                                    <p runat="server" text="黑單列表" />
+                                    <p runat="server" text="黑單列表：" />
                                     <br />
                                     <asp:Repeater ID="RptrBlk" runat="server">
                                         <ItemTemplate>
@@ -215,7 +194,7 @@
                                     <button type="button" class="btn btn-sm btn-outline-light text-white bg-dark" data-bs-toggle="popover" data-bs-placement="bottom" animation="true" data-bs-content="請輸入會員帳號，點擊新增使其就任板主職位；點擊解除使其卸任板主職位。 新增板主不得為管理員，亦不得為黑名單中的會員。">?</button><br />
                                     <asp:Button ID="btnMMUpdate" runat="server" Text="加入" OnClick="btnMMSave_Click" /><br />
                                     <asp:Button ID="btnMMDelete" runat="server" Text="解除" OnClick="btnMMDelete_Click" /><br />
-                                    <p runat="server" text="板主列表" />
+                                    <p runat="server" text="板主列表：" />
                                     <br />
                                     <asp:Repeater ID="RptrMM" runat="server">
                                         <ItemTemplate>
@@ -231,9 +210,8 @@
             </div>
         </div>
     </form>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.js"></script>
     <script src="js/jquery.min.js"></script>
+
     <script>
         var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
         var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
@@ -255,11 +233,30 @@
         });
 
     </script>
+        <style>
+        #txtAccount, #txtPassword, #btnLogin, #ltlMessage, #btnLogout {
+            background-color: white;
+            color: black;
+            font-family: Consolas;
+            font-size: 22pt;
+        }
+
+
+        #lblTEXT {
+            color: white;
+            font-size: 42pt;
+        }
+
+        .span1 {
+            color: white;
+            font-size: 16pt;
+        }
+    </style>
     <script>
         $(document).ready(function () {
-            //取得母版
+            //取得母版，不含編輯按鈕
             $.ajax({
-                url: "/API/PBoardInMain.ashx",
+                url: "/API/PBoardHandler.ashx",
                 method: "GET",
                 dataType: "JSON",
                 success: function (jsonText) {
@@ -267,11 +264,39 @@
                     for (var item of jsonText) {
                         rowsText += `
                         <tr>
+                            <td>
                               <div class="${item.PboardID}">
-                                  <p name="PboardID" class="PboardID" value="${item.PboardID}">${item.Pname}</p>
-                                  <p name="Pname" value="${item.Pname}" ></p>
-                                  <p name="Pshow" value="${item.Pshow}" ></p>
-                                  <p name="Porder" class="Porder" value="${item.Porder}" ></p>
+                                  <a href="/CboardsPage.aspx?PboardID=${item.PboardID}" name="PboardID" class="PboardID" value="${item.PboardID}">${item.Pname}</p>
+                              </div>
+                            </td>
+                        </tr>
+                        `;
+                    }
+                    $("#PBDataList_normal1").append("<table>" + rowsText + "</table>");
+                    $("#PBDataList_normal2").append("<table>" + rowsText + "</table>");
+                    console.log(jsonText);
+                    alert("成功載入前台母版塊");
+                },
+                error: function (msg) {
+                    console.log(msg);
+                    alert("母版塊載入失敗，請聯絡管理員。");
+                }
+            });
+            //取得母版及按鈕
+            $.ajax({
+                url: "/API/PBoardHandler.ashx",
+                method: "GET",
+                dataType: "JSON",
+                success: function (jsonText) {
+                    var rowsText = "";
+                    for (var item of jsonText) {
+                        rowsText += `
+                        <tr>
+                              <div>
+                                  <input id="PboardID" class="PboardID" value="${item.PboardID}" ></p>
+                                  <input id="PboardName" class="PboardName" value="${item.Pname}">${item.Pname}</input>
+                                  <input id="Porder" class="Porder" value="${item.Porder}" ></p>
+
                                 <input type="submit" id="btnPBMoveUp" class="btn-outline-primary btn-sm btnPBMoveUp" name="btnPBMoveUp" value="上移" />
                                   <button type="button" class="btn-outline-primary PBDataList_btnPBMoveDown_0" data-bs-target="#btnPBMoveDown">下移</button>
                                   <button type="button" class="btn-outline-primary PBDataList_btnPBHide_0" data-bs-target="#btnPBHide">隱藏</button>
@@ -280,40 +305,30 @@
                         </tr>
                         `;
                     }
-                    $("#PBDataList").append("<table>" + rowsText + "</table>");
+                    $("#PBDataList_Admin1").append("<table>" + rowsText + "</table>");
+                    $("#PBDataList_Admin2").append("<table>" + rowsText + "</table>");
+
                     console.log(jsonText);
-                    alert("成功載入母版塊");
+                    alert("成功載入後台母版塊");
                 },
                 error: function (msg) {
                     console.log(msg);
                     alert("母版塊載入失敗，請聯絡管理員。");
                 }
             });
-            /*<button id="btnPBMoveUp" type="button"  data-bs-target="#btnPBMoveUp">上移</button>*/
 
-            //#ID選擇棄 .class選擇棄
-            //測試用
-            $('#btnNext').click(function () {
-                alert("確定按下下一步嗎?");
-            });
-
-            //捕捉PBDataList裡面，所有的click事件，class符合btnPBMoveUp
             //上移母版
-            $("#PBDataList").on('click', ".btnPBMoveUp", function () {
-                alert("按鈕事件，尚未載入API");
+            $("#PBDataList_Admin2").on('click', ".btnPBMoveUp", function () {
+
                 var parentDiv = $(this).closest("div");
-                var id = parentDiv.find("p.PboardID");
-                var order = parentDiv.find("p.PboardID");
+                var id = parentDiv.find("input.PboardID");
+                var order = parentDiv.find('input.Porder');
                 var postData = { "PboardID": id.val(), "Porder": order.val() };
 
-                //var container = $("#btnPBMoveUp");
-                //var postData = {
-                //    "PboardID": $("p[name*=PboardID]", container).val(),
-                //    //"Pname": $("input[name=txtName]", container).val(),
-                //    "Porder": $("p[name*=Porder]", container).val(),
+                //alert(id.val());
 
                 $.ajax({
-                    url: "/API/PBoardInMain.ashx?Action=MoveUp",
+                    url: "/API/PBoardHandler.ashx?Action=MoveUp",
                     method: "POST",
                     data: postData,
                     //dataType: "JSON",
