更新新增文章與編輯文章的動態追加網址順便預覽，與各種CSS

--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -55,10 +55,11 @@
     filter: opacity(100%);
 }
 a{
+    color:#ffffff;
     text-decoration:none;
 }
 a:link{
-    background-color:#ffffff;
+    color:#ffffff;
     text-decoration:none;
 
     }
