Revert "更新新增文章與編輯文章的動態追加網址順便預覽，與各種CSS"
This reverts commit 1956d890a9b922b6ce2587b1d478a09cc63044a5.

--- a/css/CboardsPage.css
+++ b/css/CboardsPage.css
@@ -55,11 +55,10 @@
     filter: opacity(100%);
 }
 a{
-    color:#ffffff;
     text-decoration:none;
 }
 a:link{
-    color:#ffffff;
+    background-color:#ffffff;
     text-decoration:none;
 
     }
