--- a/css/EditPost.css
+++ b/css/EditPost.css
@@ -33,59 +33,34 @@ a:active {
     text-shadow: 2px 2px 2px #270c0c;
     border-bottom: 1px double #e76c25;
     box-shadow: 2px 2px 4px #e76c25;text-align: left;
-    font-size: 18px;
+    font-size: 22px;
     color: #fafafaea;
 }
         .zenbu td{
-            width: 70%;
-            font-size: 18px;
-        }
-        .zenbu th{
-         font-size: 25px;
+            width: 50%;
         }
         .zenbu td input{
             width: 80%;
         }
         .zenbu td .button{
-            width: 60%;
-            font-size: 18px;
+            width: 40%;
         }
+input{
+    color: #fafafaea;
+    font-family:'moubi';
+    font-size: 22px;
+    text-shadow: 2px 2px 2px #270c0c;
+    cursor:pointer;
+    border-radius:10px;
+    width: 20%;
+}
         .zenbu select{
           color: #fafafaea;
-          border: 1px none #e76c25;
-          box-shadow: 2px 1px 5px #e76c25;
           border-radius:10px;
-          font-size: 18px;
-
-        }
-        .zenbu textarea{
-            border: 1px none #e76c25;
-            box-shadow: 2px 1px 4px #e76c25;
-            width: 90%;
         }
         .zenbu input{
-            width: 20%;
+            width: 40%;
             color: #fafafaea;
-            color: antiquewhite; border:0;
-            background-color:#181717;
-            border: 1px none #e76c25;
-            box-shadow: 2px 1px 4px #e76c25;
-            border-radius:10px;
-            cursor:pointer;
-        }
-        .zenbu .dougu{
-            color: #fafafaea;
-            border: 1px ridge #a31515;
-            margin-bottom: 2px;
-        }
-        .zenbu input:hover{
-            box-shadow: 2px 2px 4px #cc2626;
-        }
-        .zenbu input:active{
-        }
-        .zenbu td .kakutei{
-            width: 25%;
-            
         }
         .zenbu .T{
             width: 80%;
@@ -93,53 +68,3 @@ a:active {
         .zenbu #txtPostCotent{
             color: #fafafaea;
         }
-    textarea{
-        color: #fafafaea;
-    }
-.kobi{
-    padding: 10px;
-    margin: 5px;
-    width: 97.5%;
-    font-family:'moubi';
-    text-shadow: 2px 2px 2px #270c0c;
-    border-bottom: 1px double #e76c25;
-    box-shadow: 2px 2px 4px #e76c25;
-    font-size: 22px;
-    color: #fafafaea;   
-}
-.kobi input{
-    color: antiquewhite; border:0;
-    background-color:#181717;
-    border: 1px ridge #e76c25;
-    box-shadow: 2px 1px 4px #e76c25;text-align: center;
-    border-radius:10px;
-    cursor:pointer;
-}
-.kobi img{
-    width: 50%;
-}
-.kobi th{
-    width: 20%;
-}
-.kobi .T{
-    width: 100%;
-}
-.kobi td{
-    width: 80%;
-    text-align: left;
-}
-.cbtn{
-    font-family:'moubi';
-    text-shadow: 2px 2px 2px #270c0c;
-    border: 1px ridge #e76c25;
-    box-shadow: 2px 2px 6px #e76c25;text-align: center;
-    font-size: 22px;
-    color: #fafafaea;
-    border-radius:10px;
-    width: 20%;
-    float: right;
-}
-.cbtn:hover{
-    border: 1px double #cc2626;
-    box-shadow: 2px 2px 6px #cc2626;
-}
