--- a/css/index.css
+++ b/css/index.css
@@ -56,55 +56,65 @@
 
     .hot-posts .content {
         padding: 10px;
-        border: none;
+        margin: 20px;
+
     }
 
         .hot-posts .content .article {
             padding: 10px;
             margin: 0px 0px 20px auto;
+            border: 1px double #e76c25;
+            box-shadow: 2px 2px 6px #e76c25;
         }
 
 
 
             .hot-posts .content .article h1 {
                 font-size: 20px;
+                color: #0d6efd;
             }
 
         .hot-posts .content h2 {
             margin-bottom: 0px;
             text-align: center;
             padding: 3px;
-            background: #4d4d4d;
+            background-color: red;
             color: #fff;
             border-radius: 10px 10px 0 0;
+            box-shadow: 2px 2px 6px #e76c25;
         }
 
         .hot-posts .content .article .ppd {
             font-size: 20px;
-            background-color: gray;
+            background-color: rgb(44, 44, 44);
             line-height: 60px;
             height: 100px;
             width: 70%;
+            margin-bottom:18px;
+            color: #0d6efd;
 
         }
             .hot-posts .content .article .ppd .ellipsis {
-                background-color: gray;
+                background-color: rgb(44, 44, 44);
                 overflow: hidden;
                 display: -webkit-box;
                 text-overflow: ellipsis;
                 -webkit-line-clamp: 1; /*¦æ¼Æ*/
                 -webkit-box-orient: vertical;
                 white-space: normal;
+                color: #0d6efd;
             }
 
         .hot-posts .content .article h3 {
             font-size: 20px;
             float: left;
+            color: #0d6efd;
         }
 
         .hot-posts .content .article h4 {
             font-size: 20px;
             float: right;
-            margin-right:30px;
+            margin-right: 30px;
+            color: #0d6efd;
         }
 
